# kinova-leaf-grasping

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
.devcontainer/: devcontainer.json
src/kinova_python_control/: package.xml  setup.cfg  setup.py
src/next_best_view/: CMakeLists.txt  package.xml
src/next_best_view/launch/: moveit.launch.py
src/next_best_view/scripts/: example_node.py
src/next_best_view/src/: simple_arm_controller.cpp  simple_vision_controller.cpp
